Fix gapping and image scaling.

--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -20,6 +20,9 @@
     background-color: #FCC;
     .portrait {
       flex: 0;
+      & > img {
+        display: block;
+      }
     }
     .text {
       flex: 1;
@@ -30,13 +33,15 @@
     background-color: #CFC;
     display: flex;
     .content {
-      flex: 0 0 30%;;
+      display: block;
+      flex: 0 1 25%;
       flex-wrap: wrap;
-      flex-direction: row;
+
       & > img {
-        max-width: 100%;
         height: auto;
-        object-fit: contain;
+        width: 100%;
+        object-fit: cover;
+        display: block;
       }
     }
     .markdown {
